update with swagger security information for basic auth.  Updated swagger/openapi
